# the-49th-call

./: LICENSE  MATH_SWEEP.md  Project.lisp  README.md  ere.pl  ere_negative_control_audit.py  graveyard.forth
.github/scripts/: agent.py
.github/workflows/: autonomous-agent.yml
.sovereign/: worm-hook.json
decode/: arabic_roots.txt  aramaic_roots.txt  hebrew_roots.txt
idris-gate/: idris-gate.ipkg
idris-gate/src/Gate/: Gate.idr  Letter.idr
idris-gate/src/Prism/: CExec.idr  Linear.idr  Memory.idr  Mirror.idr  Resource.idr
lean/: AlHamid.lean  DeeCall49.lean  DeeCall49_Closed.lean  DeeCall49_Final.lean  DeeCall49_scaffold.lean
reviews/: REVIEW-001.md
src/: Cargo.toml  lib.rs
subsections/abjad-swarm/: CONTRIBUTING.md  LICENSE  README.md  SOVEREIGN_NODE_KEY.md  abjad.py  load_weights.py  server.py  subleq.py  swarm.py  tensor_bridge.py
substrate/: comefrom.i  mamari.cbl  soul_spec.hs  subleq.asm  substrate.apl
